Prevent horizontal overflow on zone landing pages

--- a/media/redesign/stylus/globals.styl
+++ b/media/redesign/stylus/globals.styl
@@ -2,6 +2,9 @@
 
 *  
 
+html
+  overflow-x hidden
+
 html, body
   background #fff
 
